<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">芸茗茶业</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_account_hint">手机号/用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="content_fail">请求失败, 请重新发送请求</string>
    <string name="phone_wrong">输入的手机号码格式不正确</string>
    <string name="pw_wrong">输入的密码不能为空</string>
    <string name="phone_null">输入的手机号码不能为空</string>
    <string name="home_search">输入关键字</string>
    <string name="tab_home">首页</string>
    <string name="tab_mall">商城</string>
    <string name="tab_scan">扫码</string>
    <string name="tab_mine">我的</string>
    <string name="tab_more">更多</string>
    <string name="product_classify">产品分类</string>
    <string name="mine_orderlist">订单记录</string>
    <string name="mine_favorite">收藏夹</string>
    <string name="mine_shopping_car">购物车</string>
    <string name="mine_push_notification">推送消息</string>
    <string name="mine_credit">积分兑换</string>
    <string name="scan_title">信息扫描</string>
    <string name="startscan">开始扫描</string>
    <string name="back">返回</string>
    <string name="logout">退出登录</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
</resources>